partly styled weekdays

--- a/index.html
+++ b/index.html
@@ -5,14 +5,110 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header></header>
     <main>
         <div id="currentDiv"></div>
         <div id="warningDiv"></div>
-        <div id="weekDiv"></div>
+        <div id="weekDiv">
+            <div></div>
+            <div class="week-day-list" id="weekDayList">
+                <button class="week-day-btn">
+                    <div class="date-info-div">
+                        <h2>Måndag</h2>
+                        <h3>6/3</h3>
+                    </div>
+                    <div class="weather-info-div">
+                        <img class="week-day-icon" src="/content/icons/snowflake.svg" alt="">
+                        <div class="week-day-temperature-div">
+                            <h3>0°</h3>
+                            <h3>-4°</h3>
+                        </div>
+                    </div>
+                </button>
+                <button class="week-day-btn">
+                    <div class="date-info-div">
+                        <h2>Måndag</h2>
+                        <h3>6/3</h3>
+                    </div>
+                    <div class="weather-info-div">
+                        <img class="week-day-icon" src="/content/icons/snowflake.svg" alt="">
+                        <div class="week-day-temperature-div">
+                            <h3>0°</h3>
+                            <h3>-4°</h3>
+                        </div>
+                    </div>
+                </button>
+                <button class="week-day-btn">
+                    <div class="date-info-div">
+                        <h2>Måndag</h2>
+                        <h3>6/3</h3>
+                    </div>
+                    <div class="weather-info-div">
+                        <img class="week-day-icon" src="/content/icons/snowflake.svg" alt="">
+                        <div class="week-day-temperature-div">
+                            <h3>0°</h3>
+                            <h3>-4°</h3>
+                        </div>
+                    </div>
+                </button>
+                <button class="week-day-btn">
+                    <div class="date-info-div">
+                        <h2>Måndag</h2>
+                        <h3>6/3</h3>
+                    </div>
+                    <div class="weather-info-div">
+                        <img class="week-day-icon" src="/content/icons/snowflake.svg" alt="">
+                        <div class="week-day-temperature-div">
+                            <h3>0°</h3>
+                            <h3>-4°</h3>
+                        </div>
+                    </div>
+                </button>
+                <button class="week-day-btn">
+                    <div class="date-info-div">
+                        <h2>Måndag</h2>
+                        <h3>6/3</h3>
+                    </div>
+                    <div class="weather-info-div">
+                        <img class="week-day-icon" src="/content/icons/snowflake.svg" alt="">
+                        <div class="week-day-temperature-div">
+                            <h3>0°</h3>
+                            <h3>-4°</h3>
+                        </div>
+                    </div>
+                </button>
+                <button class="week-day-btn">
+                    <div class="date-info-div">
+                        <h2>Måndag</h2>
+                        <h3>6/3</h3>
+                    </div>
+                    <div class="weather-info-div">
+                        <img class="week-day-icon" src="/content/icons/snowflake.svg" alt="">
+                        <div class="week-day-temperature-div">
+                            <h3>0°</h3>
+                            <h3>-4°</h3>
+                        </div>
+                    </div>
+                </button>
+                <button class="week-day-btn">
+                    <div class="date-info-div">
+                        <h2>Måndag</h2>
+                        <h3>6/3</h3>
+                    </div>
+                    <div class="weather-info-div">
+                        <img class="week-day-icon" src="/content/icons/snowflake.svg" alt="">
+                        <div class="week-day-temperature-div">
+                            <h3>0°</h3>
+                            <h3>-4°</h3>
+                        </div>
+                    </div>
+                </button>
+                
+            </div>
+        </div>
     </main>
     <footer></footer>
     
