mor on weekview

--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
         <div id="currentDiv"></div>
         <div id="warningDiv"></div>
         <div id="weekDiv">
-            <div></div>
             <div class="week-day-list" id="weekDayList">
+                <div class="week-day-header">
+                    <p>Weather</p>
+                    <div>
+                        <p>High</p>
+                        <p>Low</p>
+                    </div>
+                </div>
                 <button class="week-day-btn">
                     <div class="date-info-div">
                         <h2>Måndag</h2>
