--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 <body>
     <header></header>
     <main>
-        <div id="currentDiv"></div>
+        <div id="currentDiv">
+            <div class="current-view">
+                <h1>Södermalm</h1>
+                <div class="date-info-div">
+                    <h2>Måndag</h2>
+                    <h2>6/3</h2>
+                </div>
+                <div class="weather-info-div">
+                    <img class="current-icon" src="/content/icons/snowflake.svg" alt="" srcset="">
+                    <p>-4°</p>
+                </div>
+            </div>
+        </div>
         <div id="warningDiv"></div>
         <div id="weekDiv">
             <div class="week-day-list" id="weekDayList">
