fixed mixins and more

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <a href="#"><img src="content/images/Logo-sun.svg" alt=""></a>
+    </header>
     <main>
         <div id="currentDiv">
             <div class="current-view">
@@ -128,7 +130,9 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <p>Copyright © Lorem app - 2023</p>
+    </footer>
     
 </body>
 </html>
