--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 </head>
 <body>
     <header>
-        <a href="#"><img src="content/images/Logo-sun.svg" alt=""></a>
+        <div class="logo-div">
+            <a href="#"><img src="content/images/Logo-sun.svg" alt=""></a>
+        </div>
+        <div class="search-div">
+            <div class="search-bar-div">
+                <input type="text">
+            </div>
+            <div class="search-icon-div">
+                <img src="content/icons/search.svg" alt="search icon">
+            </div>
+        </div>
     </header>
     <main>
         <div id="currentDiv">
