--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="weekViewDiv">
             <div id="currentDiv">
                 <div class="current-view">
-                    <h1>Södermalm</h1>
+                    <h1>Din plats</h1>
                     <div class="date-info-div">
                         <h2>Måndag</h2>
                         <h2>6/3</h2>
