--- a/index.html
+++ b/index.html
@@ -37,109 +37,8 @@
                     </div>
                 </div>
             </div>
-            <div id="warningDiv"></div>
-            <div id="weekDiv">
-                <div class="week-day-list" id="weekDayList">
-                    <div class="week-day-header">
-                        <p>Weather</p>
-                        <div>
-                            <p>High</p>
-                            <p>Low</p>
-                        </div>
-                    </div>
-                    <button class="week-day-btn">
-                        <div class="date-info-div">
-                            <h2>Måndag</h2>
-                            <h3>6/3</h3>
-                        </div>
-                        <div class="weather-info-div">
-                            <img class="week-day-icon" src="/content/icons/snowflake.svg" alt="">
-                            <div class="week-day-temperature-div">
-                                <h3>0°</h3>
-                                <h3>-4°</h3>
-                            </div>
-                        </div>
-                    </button>
-                    <button class="week-day-btn">
-                        <div class="date-info-div">
-                            <h2>Måndag</h2>
-                            <h3>6/3</h3>
-                        </div>
-                        <div class="weather-info-div">
-                            <img class="week-day-icon" src="/content/icons/snowflake.svg" alt="">
-                            <div class="week-day-temperature-div">
-                                <h3>0°</h3>
-                                <h3>-4°</h3>
-                            </div>
-                        </div>
-                    </button>
-                    <button class="week-day-btn">
-                        <div class="date-info-div">
-                            <h2>Måndag</h2>
-                            <h3>6/3</h3>
-                        </div>
-                        <div class="weather-info-div">
-                            <img class="week-day-icon" src="/content/icons/snowflake.svg" alt="">
-                            <div class="week-day-temperature-div">
-                                <h3>0°</h3>
-                                <h3>-4°</h3>
-                            </div>
-                        </div>
-                    </button>
-                    <button class="week-day-btn">
-                        <div class="date-info-div">
-                            <h2>Måndag</h2>
-                            <h3>6/3</h3>
-                        </div>
-                        <div class="weather-info-div">
-                            <img class="week-day-icon" src="/content/icons/snowflake.svg" alt="">
-                            <div class="week-day-temperature-div">
-                                <h3>0°</h3>
-                                <h3>-4°</h3>
-                            </div>
-                        </div>
-                    </button>
-                    <button class="week-day-btn">
-                        <div class="date-info-div">
-                            <h2>Måndag</h2>
-                            <h3>6/3</h3>
-                        </div>
-                        <div class="weather-info-div">
-                            <img class="week-day-icon" src="/content/icons/snowflake.svg" alt="">
-                            <div class="week-day-temperature-div">
-                                <h3>0°</h3>
-                                <h3>-4°</h3>
-                            </div>
-                        </div>
-                    </button>
-                    <button class="week-day-btn">
-                        <div class="date-info-div">
-                            <h2>Måndag</h2>
-                            <h3>6/3</h3>
-                        </div>
-                        <div class="weather-info-div">
-                            <img class="week-day-icon" src="/content/icons/snowflake.svg" alt="">
-                            <div class="week-day-temperature-div">
-                                <h3>0°</h3>
-                                <h3>-4°</h3>
-                            </div>
-                        </div>
-                    </button>
-                    <button class="week-day-btn">
-                        <div class="date-info-div">
-                            <h2>Måndag</h2>
-                            <h3>6/3</h3>
-                        </div>
-                        <div class="weather-info-div">
-                            <img class="week-day-icon" src="/content/icons/snowflake.svg" alt="">
-                            <div class="week-day-temperature-div">
-                                <h3>0°</h3>
-                                <h3>-4°</h3>
-                            </div>
-                        </div>
-                    </button>
-                    
-                </div>
+            <div id="warningDiv">
+
             </div>
         </div>
         <div id="dayViewDiv">
