--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo-div">
-            <a href="#"><img src="content/images/Logo-sun.svg" alt=""></a>
+            <a href="index.html"><img src="content/images/Logo-sun.svg" alt=""></a>
         </div>
         <div class="search-div">
             <div class="search-bar-div">
