started with the searchbar

--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
         </div>
         <div class="search-div">
             <div class="search-bar-div">
-                <input type="text">
+                <input id="searchInput" type="text">
             </div>
             <div class="search-icon-div">
                 <img src="content/icons/search.svg" alt="search icon">
             </div>
+            <div id="searchResultsList" class="search-results">
+                <ul id="placesList"></ul>
+              </div>
         </div>
     </header>
     <main>
