Fixed search result

--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
             <a href="index.html"><img src="content/images/Logo-sun.svg" alt=""></a>
         </div>
         <div class="search-div">
-            <div class="search-bar-div">
-                <input id="searchInput" type="text">
-            </div>
-            <div class="search-icon-div">
-                <img src="content/icons/search.svg" alt="search icon">
+            <div class="row">
+                <div class="search-bar-div">
+                    <input id="searchInput" type="text">
+                </div>
+                <div class="search-icon-div">
+                    <img src="content/icons/search.svg" alt="search icon">
+                </div>
             </div>
             <div id="searchResultsList" class="search-results">
                 <ul id="placesList"></ul>
-              </div>
+            </div>
         </div>
     </header>
     <main>
